--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/digitizer"]
 	path = lib/digitizer
 	url = git@github.com:aogaki/libDELILA-digitizer.git
+[submodule "lib/net"]
+	path = lib/net
+	url = git@github.com:aogaki/libDELILA-net.git
