Make example uses only lib/net

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,11 @@ elseif(EXISTS "/usr/local/lib/libzmq.dylib")
     set(ZMQ_INCLUDE_DIRS "/usr/local/include")
     set(ZMQ_FOUND TRUE)
     message(STATUS "Found ZMQ at: ${ZMQ_LIBRARIES}")
+elseif(EXISTS "/usr/lib/libzmq.dylib")
+    set(ZMQ_LIBRARIES "/usr/lib/libzmq.dylib")
+    set(ZMQ_INCLUDE_DIRS "/usr/include")
+    set(ZMQ_FOUND TRUE)
+    message(STATUS "Found ZMQ at: ${ZMQ_LIBRARIES}")
 else()
     # Fallback to pkg-config
     pkg_check_modules(ZMQ libzmq)
@@ -45,6 +50,11 @@ elseif(EXISTS "/usr/local/lib/liblz4.dylib")
     set(LZ4_INCLUDE_DIRS "/usr/local/include")
     set(LZ4_FOUND TRUE)
     message(STATUS "Found LZ4 at: ${LZ4_LIBRARIES}")
+elseif(EXISTS "/usr/lib/liblz4.dylib")
+    set(LZ4_LIBRARIES "/usr/lib/liblz4.dylib")
+    set(LZ4_INCLUDE_DIRS "/usr/include")
+    set(LZ4_FOUND TRUE)
+    message(STATUS "Found LZ4 at: ${LZ4_LIBRARIES}")
 else()
     pkg_check_modules(LZ4 liblz4)
 endif()
@@ -58,6 +68,11 @@ if(EXISTS "/opt/homebrew/lib/libxxhash.dylib")
 elseif(EXISTS "/usr/local/lib/libxxhash.dylib")
     set(XXHASH_LIBRARIES "/usr/local/lib/libxxhash.dylib")
     set(XXHASH_INCLUDE_DIRS "/usr/local/include")
+    set(XXHASH_FOUND TRUE)
+    message(STATUS "Found xxHash at: ${XXHASH_LIBRARIES}")
+elseif(EXISTS "/usr/lib/libxxhash.dylib")
+    set(XXHASH_LIBRARIES "/usr/lib/libxxhash.dylib")
+    set(XXHASH_INCLUDE_DIRS "/usr/include")
     set(XXHASH_FOUND TRUE)
     message(STATUS "Found xxHash at: ${XXHASH_LIBRARIES}")
 else()
