--- a/lib/net/examples/CMakeLists.txt
+++ b/lib/net/examples/CMakeLists.txt
@@ -8,65 +8,107 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Find ZeroMQ
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(ZMQ REQUIRED libzmq)
 
-# Alternative ZeroMQ setup for macOS/Homebrew
-if(NOT ZMQ_FOUND)
-    find_path(ZMQ_INCLUDE_DIR zmq.h PATHS /opt/homebrew/include /usr/local/include)
-    find_library(ZMQ_LIBRARY zmq PATHS /opt/homebrew/lib /usr/local/lib)
-    if(ZMQ_INCLUDE_DIR AND ZMQ_LIBRARY)
-        set(ZMQ_FOUND TRUE)
-        set(ZMQ_INCLUDE_DIRS ${ZMQ_INCLUDE_DIR})
-        set(ZMQ_LIBRARIES ${ZMQ_LIBRARY})
+# Direct path specification for ZMQ on macOS
+if(EXISTS "/opt/homebrew/lib/libzmq.dylib")
+    set(ZMQ_LIBRARIES "/opt/homebrew/lib/libzmq.dylib")
+    set(ZMQ_INCLUDE_DIRS "/opt/homebrew/include")
+    set(ZMQ_FOUND TRUE)
+elseif(EXISTS "/usr/local/lib/libzmq.dylib")
+    set(ZMQ_LIBRARIES "/usr/local/lib/libzmq.dylib")
+    set(ZMQ_INCLUDE_DIRS "/usr/local/include")
+    set(ZMQ_FOUND TRUE)
+elseif(EXISTS "/usr/lib/libzmq.dylib")
+    set(ZMQ_LIBRARIES "/usr/lib/libzmq.dylib")
+    set(ZMQ_INCLUDE_DIRS "/usr/include")
+    set(ZMQ_FOUND TRUE)
+else()
+    pkg_check_modules(ZMQ REQUIRED libzmq)
+    
+    # Alternative ZeroMQ setup if pkg-config fails
+    if(NOT ZMQ_FOUND)
+        find_path(ZMQ_INCLUDE_DIR zmq.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
+        find_library(ZMQ_LIBRARY zmq PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
+        if(ZMQ_INCLUDE_DIR AND ZMQ_LIBRARY)
+            set(ZMQ_FOUND TRUE)
+            set(ZMQ_INCLUDE_DIRS ${ZMQ_INCLUDE_DIR})
+            set(ZMQ_LIBRARIES ${ZMQ_LIBRARY})
+        endif()
     endif()
 endif()
 
 # Find LZ4 - use same approach as main project
-find_path(LZ4_INCLUDE_DIR lz4.h PATHS /opt/homebrew/include /usr/local/include)
-find_library(LZ4_LIBRARY lz4 PATHS /opt/homebrew/lib /usr/local/lib)
-if(LZ4_INCLUDE_DIR AND LZ4_LIBRARY)
+if(EXISTS "/opt/homebrew/lib/liblz4.dylib")
+    set(LZ4_LIBRARIES "/opt/homebrew/lib/liblz4.dylib")
+    set(LZ4_INCLUDE_DIRS "/opt/homebrew/include")
     set(LZ4_FOUND TRUE)
-    set(LZ4_INCLUDE_DIRS ${LZ4_INCLUDE_DIR})
-    set(LZ4_LIBRARIES ${LZ4_LIBRARY})
+elseif(EXISTS "/usr/local/lib/liblz4.dylib")
+    set(LZ4_LIBRARIES "/usr/local/lib/liblz4.dylib")
+    set(LZ4_INCLUDE_DIRS "/usr/local/include")
+    set(LZ4_FOUND TRUE)
+elseif(EXISTS "/usr/lib/liblz4.dylib")
+    set(LZ4_LIBRARIES "/usr/lib/liblz4.dylib")
+    set(LZ4_INCLUDE_DIRS "/usr/include")
+    set(LZ4_FOUND TRUE)
 else()
-    pkg_check_modules(LZ4 REQUIRED liblz4)
+    find_path(LZ4_INCLUDE_DIR lz4.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
+    find_library(LZ4_LIBRARY lz4 PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
+    if(LZ4_INCLUDE_DIR AND LZ4_LIBRARY)
+        set(LZ4_FOUND TRUE)
+        set(LZ4_INCLUDE_DIRS ${LZ4_INCLUDE_DIR})
+        set(LZ4_LIBRARIES ${LZ4_LIBRARY})
+    else()
+        pkg_check_modules(LZ4 REQUIRED liblz4)
+    endif()
 endif()
 
 # Find xxHash - use same approach as main project
-find_path(XXHASH_INCLUDE_DIR xxhash.h PATHS /opt/homebrew/include /usr/local/include)
-find_library(XXHASH_LIBRARY xxhash PATHS /opt/homebrew/lib /usr/local/lib)
-if(XXHASH_INCLUDE_DIR AND XXHASH_LIBRARY)
+if(EXISTS "/opt/homebrew/lib/libxxhash.dylib")
+    set(XXHASH_LIBRARIES "/opt/homebrew/lib/libxxhash.dylib")
+    set(XXHASH_INCLUDE_DIRS "/opt/homebrew/include")
     set(XXHASH_FOUND TRUE)
-    set(XXHASH_INCLUDE_DIRS ${XXHASH_INCLUDE_DIR})
-    set(XXHASH_LIBRARIES ${XXHASH_LIBRARY})
+elseif(EXISTS "/usr/local/lib/libxxhash.dylib")
+    set(XXHASH_LIBRARIES "/usr/local/lib/libxxhash.dylib")
+    set(XXHASH_INCLUDE_DIRS "/usr/local/include")
+    set(XXHASH_FOUND TRUE)
+elseif(EXISTS "/usr/lib/libxxhash.dylib")
+    set(XXHASH_LIBRARIES "/usr/lib/libxxhash.dylib")
+    set(XXHASH_INCLUDE_DIRS "/usr/include")
+    set(XXHASH_FOUND TRUE)
 else()
-    pkg_check_modules(XXHASH REQUIRED libxxhash)
+    find_path(XXHASH_INCLUDE_DIR xxhash.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
+    find_library(XXHASH_LIBRARY xxhash PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
+    if(XXHASH_INCLUDE_DIR AND XXHASH_LIBRARY)
+        set(XXHASH_FOUND TRUE)
+        set(XXHASH_INCLUDE_DIRS ${XXHASH_INCLUDE_DIR})
+        set(XXHASH_LIBRARIES ${XXHASH_LIBRARY})
+    else()
+        pkg_check_modules(XXHASH REQUIRED libxxhash)
+    endif()
 endif()
 
 # Check if we're building as part of the main project
-if(TARGET delila_net AND TARGET delila_digitizer)
+if(TARGET delila_net)
     # Building as part of main project
     set(DELILA_NET_LIBRARY delila_net)
-    set(DELILA_DIGITIZER_LIBRARY delila_digitizer)
     set(DELILA_NET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
-    set(DELILA_DIGITIZER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../digitizer/include)
 else()
-    # Building standalone - try to find libraries
-    find_library(DELILA_NET_LIBRARY delila_net PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../build)
-    find_library(DELILA_DIGITIZER_LIBRARY delila_digitizer PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../../digitizer/build)
+    # Building standalone - try to find library
+    find_library(DELILA_NET_LIBRARY delila_net PATHS 
+        ${CMAKE_CURRENT_SOURCE_DIR}/../build
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../../build/lib/net
+    )
     
-    if(NOT DELILA_NET_LIBRARY OR NOT DELILA_DIGITIZER_LIBRARY)
-        message(FATAL_ERROR "Could not find DELILA libraries. Please build the main project first.")
+    if(NOT DELILA_NET_LIBRARY)
+        message(FATAL_ERROR "Could not find delila_net library. Please build the lib/net project first.")
     endif()
     
     set(DELILA_NET_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
-    set(DELILA_DIGITIZER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../digitizer/include)
 endif()
 
 # Common include directories and libraries
 set(COMMON_INCLUDE_DIRS
     ${DELILA_NET_INCLUDE_DIR}
-    ${DELILA_DIGITIZER_INCLUDE_DIR}
     ${LZ4_INCLUDE_DIRS}
     ${XXHASH_INCLUDE_DIRS}
     ${ZMQ_INCLUDE_DIRS}
@@ -74,7 +116,6 @@ set(COMMON_INCLUDE_DIRS
 
 set(COMMON_LIBRARIES
     ${DELILA_NET_LIBRARY}
-    ${DELILA_DIGITIZER_LIBRARY}
     ${LZ4_LIBRARIES}
     ${XXHASH_LIBRARIES}
     ${ZMQ_LIBRARIES}
@@ -113,4 +154,3 @@ message(STATUS "  ZMQ Found: ${ZMQ_FOUND}")
 message(STATUS "  LZ4 Found: ${LZ4_FOUND}")
 message(STATUS "  xxHash Found: ${XXHASH_FOUND}")
 message(STATUS "  Net Library: ${DELILA_NET_LIBRARY}")
-message(STATUS "  Digitizer Library: ${DELILA_DIGITIZER_LIBRARY}")
