--- a/lib/net/examples/CMakeLists.txt
+++ b/lib/net/examples/CMakeLists.txt
@@ -6,85 +6,20 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Find ZeroMQ
-find_package(PkgConfig REQUIRED)
+# Inherit all configuration from parent project - no independent detection needed
+message(STATUS "Examples: Using parent ZMQ config: ${ZMQ_LIBRARIES}")
+message(STATUS "Examples: Using parent LZ4 config: ${LZ4_LIBRARIES}")
+message(STATUS "Examples: Using parent xxHash config: ${XXHASH_LIBRARIES}")
 
-# Direct path specification for ZMQ on macOS
-if(EXISTS "/opt/homebrew/lib/libzmq.dylib")
-    set(ZMQ_LIBRARIES "/opt/homebrew/lib/libzmq.dylib")
-    set(ZMQ_INCLUDE_DIRS "/opt/homebrew/include")
-    set(ZMQ_FOUND TRUE)
-elseif(EXISTS "/usr/local/lib/libzmq.dylib")
-    set(ZMQ_LIBRARIES "/usr/local/lib/libzmq.dylib")
-    set(ZMQ_INCLUDE_DIRS "/usr/local/include")
-    set(ZMQ_FOUND TRUE)
-elseif(EXISTS "/usr/lib/libzmq.dylib")
-    set(ZMQ_LIBRARIES "/usr/lib/libzmq.dylib")
-    set(ZMQ_INCLUDE_DIRS "/usr/include")
-    set(ZMQ_FOUND TRUE)
-else()
-    pkg_check_modules(ZMQ REQUIRED libzmq)
-    
-    # Alternative ZeroMQ setup if pkg-config fails
-    if(NOT ZMQ_FOUND)
-        find_path(ZMQ_INCLUDE_DIR zmq.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
-        find_library(ZMQ_LIBRARY zmq PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
-        if(ZMQ_INCLUDE_DIR AND ZMQ_LIBRARY)
-            set(ZMQ_FOUND TRUE)
-            set(ZMQ_INCLUDE_DIRS ${ZMQ_INCLUDE_DIR})
-            set(ZMQ_LIBRARIES ${ZMQ_LIBRARY})
-        endif()
-    endif()
+# Verify parent configured dependencies properly
+if(NOT ZMQ_FOUND)
+    message(FATAL_ERROR "ZMQ not found in parent project configuration")
 endif()
-
-# Find LZ4 - use same approach as main project
-if(EXISTS "/opt/homebrew/lib/liblz4.dylib")
-    set(LZ4_LIBRARIES "/opt/homebrew/lib/liblz4.dylib")
-    set(LZ4_INCLUDE_DIRS "/opt/homebrew/include")
-    set(LZ4_FOUND TRUE)
-elseif(EXISTS "/usr/local/lib/liblz4.dylib")
-    set(LZ4_LIBRARIES "/usr/local/lib/liblz4.dylib")
-    set(LZ4_INCLUDE_DIRS "/usr/local/include")
-    set(LZ4_FOUND TRUE)
-elseif(EXISTS "/usr/lib/liblz4.dylib")
-    set(LZ4_LIBRARIES "/usr/lib/liblz4.dylib")
-    set(LZ4_INCLUDE_DIRS "/usr/include")
-    set(LZ4_FOUND TRUE)
-else()
-    find_path(LZ4_INCLUDE_DIR lz4.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
-    find_library(LZ4_LIBRARY lz4 PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
-    if(LZ4_INCLUDE_DIR AND LZ4_LIBRARY)
-        set(LZ4_FOUND TRUE)
-        set(LZ4_INCLUDE_DIRS ${LZ4_INCLUDE_DIR})
-        set(LZ4_LIBRARIES ${LZ4_LIBRARY})
-    else()
-        pkg_check_modules(LZ4 REQUIRED liblz4)
-    endif()
+if(NOT LZ4_FOUND)
+    message(FATAL_ERROR "LZ4 not found in parent project configuration")  
 endif()
-
-# Find xxHash - use same approach as main project
-if(EXISTS "/opt/homebrew/lib/libxxhash.dylib")
-    set(XXHASH_LIBRARIES "/opt/homebrew/lib/libxxhash.dylib")
-    set(XXHASH_INCLUDE_DIRS "/opt/homebrew/include")
-    set(XXHASH_FOUND TRUE)
-elseif(EXISTS "/usr/local/lib/libxxhash.dylib")
-    set(XXHASH_LIBRARIES "/usr/local/lib/libxxhash.dylib")
-    set(XXHASH_INCLUDE_DIRS "/usr/local/include")
-    set(XXHASH_FOUND TRUE)
-elseif(EXISTS "/usr/lib/libxxhash.dylib")
-    set(XXHASH_LIBRARIES "/usr/lib/libxxhash.dylib")
-    set(XXHASH_INCLUDE_DIRS "/usr/include")
-    set(XXHASH_FOUND TRUE)
-else()
-    find_path(XXHASH_INCLUDE_DIR xxhash.h PATHS /opt/homebrew/include /usr/local/include /usr/include)
-    find_library(XXHASH_LIBRARY xxhash PATHS /opt/homebrew/lib /usr/local/lib /usr/lib)
-    if(XXHASH_INCLUDE_DIR AND XXHASH_LIBRARY)
-        set(XXHASH_FOUND TRUE)
-        set(XXHASH_INCLUDE_DIRS ${XXHASH_INCLUDE_DIR})
-        set(XXHASH_LIBRARIES ${XXHASH_LIBRARY})
-    else()
-        pkg_check_modules(XXHASH REQUIRED libxxhash)
-    endif()
+if(NOT XXHASH_FOUND)
+    message(FATAL_ERROR "xxHash not found in parent project configuration")
 endif()
 
 # Check if we're building as part of the main project
