Removing ROOT dependencies from digitizer part

--- a/cmake/DELILA2Config.cmake.in
+++ b/cmake/DELILA2Config.cmake.in
@@ -4,7 +4,7 @@ include(CMakeFindDependencyMacro)
 
 # Find required dependencies
 find_dependency(PkgConfig REQUIRED)
-find_dependency(ROOT REQUIRED COMPONENTS RIO Net)
+# ROOT dependency removed
 find_dependency(Protobuf REQUIRED)
 
 # Find optional dependencies
